objects/sharinpix__EinsteinReviewerSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>sharinpix__AttachmentIdFieldName__c</fullName>
        <label>Attachment Id Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharinpix__CustomImplementation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if you want a custom implementation for the creation of the Review Set</description>
        <inlineHelpText>Check this if you want a custom implementation for the creation of the Review Set</inlineHelpText>
        <label>Custom Implementation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sharinpix__ImageFilenameFieldName__c</fullName>
        <label>Image Filename Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharinpix__ImageUrlFieldName__c</fullName>
        <label>Image Url Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharinpix__Limit__c</fullName>
        <defaultValue>10</defaultValue>
        <inlineHelpText>The maximum of Image per Review Set. Default to 10. Max is 30.</inlineHelpText>
        <label>Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sharinpix__ModelId__c</fullName>
        <label>Model Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharinpix__ObjectAPIName__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharinpix__PredictionPayloadFieldName__c</fullName>
        <label>Prediction Payload Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharinpix__SortOptions__c</fullName>
        <inlineHelpText>Field api name delimited by the sort order (asc, desc). If no sort order specified, default is asc.
Default field is CreatedDate</inlineHelpText>
        <label>Sort Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharinpix__Status__c</fullName>
        <inlineHelpText>Field name to set status value. (Not started, In progress, Completed)</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharinpix__UpdatedPayloadFieldName__c</fullName>
        <label>Updated Payload Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Einstein Reviewer Setting</label>
    <pluralLabel>Einstein Reviewer Settings</pluralLabel>
    <validationRules>
        <fullName>sharinpix__ImageUrlOrAttachmentId</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( ISBLANK(sharinpix__ImageUrlFieldName__c) ) &amp;&amp;  NOT( ISBLANK(sharinpix__AttachmentIdFieldName__c) )</errorConditionFormula>
        <errorMessage>Image Url Field Name and Attachment Id Field Name cannot be filled at the same time.</errorMessage>
    </validationRules>
</CustomObject>